add support for irc.

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,7 @@
 %% -*- mode: erlang -*-
 {deps, [
         {exmpp, ".*",
-         {git, "git://github.com/kaos/exmpp.git", "kaos"}}
+         {git, "git://github.com/kaos/exmpp.git", "kaos"}},
+        {eircc, ".*",
+         {git, "git://github.com/kaos/eircc.git", "master"}}
        ]}.
