--- a/example.config
+++ b/example.config
@@ -12,7 +12,7 @@
        {chan, "#example"},
        {nick, "example-bot"},
        {pass, "secret"},
-       {bridge, [jabber]}
+       {bridges, [jabber]}
       ]},
      {jabber, yabot_xmpp,
       [
@@ -21,7 +21,7 @@
        %% {method, digest} %% password, digest, "PLAIN", "ANONYMOUS", "DIGEST-MD5"
        {room, "chat@muc.example.com"},
        {nick, "example-bot"},
-       {bridge, [irc]}
+       {bridges, [irc]}
       ]}
     ]}
   ]}
