--- a/example.config
+++ b/example.config
@@ -12,7 +12,7 @@
        {chan, "#example"},
        {nick, "example-bot"},
        {pass, "secret"},
-       {bridges, [jabber]}
+       {bridges, [jabber, bot]}
       ]},
      {jabber, yabot_xmpp,
       [
@@ -21,7 +21,12 @@
        %% {method, digest} %% password, digest, "PLAIN", "ANONYMOUS", "DIGEST-MD5"
        {room, "chat@muc.example.com"},
        {nick, "example-bot"},
-       {bridges, [irc]}
+       {bridges, [irc, bot]}
+      ]},
+     {bot, yabot_bot,
+      [
+       {nick, "example-bot"}
+       %% {bridges, []}
       ]}
     ]}
   ]}
