add support for arbitrary commands to yabot_bot.

--- a/example.config
+++ b/example.config
@@ -25,7 +25,11 @@
       ]},
      {bot, yabot_bot,
       [
-       {nick, "example-bot"}
+       {nick, "example-bot"},
+       {cmds, 
+        [
+         {exec, date, "date", 0, "date", "Get my system date."}
+        ]}
        %% {bridges, []}
       ]}
     ]}
