add bot filters.

--- a/example.config
+++ b/example.config
@@ -29,6 +29,11 @@
        {cmds, 
         [
          {exec, date, "date", 0, "date", "Get my system date."}
+        ]},
+       {filters, 
+        [
+         "cat", %% a NOP (or identity) filter, leaving the message as-is.
+         "sed 's/.*/echo \\0/'"  %% prepend "echo " to all messages..
         ]}
        %% {bridges, []}
       ]}
